<resources>
    <string name="app_name">Ordrs</string>
    <string name="menu_downloaded">Menu list downloaded!</string>
    <string name="dish_ingredients_separator_text">Ingredients</string>
    <string name="dish_allergens_separator_text">Allergens</string>
    <string name="dish_requests_separator_text">Customer requests</string>
    <string name="dish_requests_hint">Enter customer requests</string>
    <string name="dish_name_and_price_separator_text">Name and price</string>
    <string name="add_to_order_button">Add to order</string>
    <string name="remove_from_order_button">Remove from order</string>
    <string name="get_bill">Get Bill</string>
    <string name="bill_dialog_title">To Pay:</string>
    <string name="retry_download_button">Retry</string>
    <string name="error_downloading_dishes">Error downloading dishes.</string>
    <string name="downloading_dishes">Downloading Dishes</string>
    <string name="menu_list_action_bar_title">Menu List</string>
</resources>
